--- a/MyFirstMochaProject/package.json
+++ b/MyFirstMochaProject/package.json
@@ -4,13 +4,21 @@
   "description": "eerste mocha project",
   "main": "MyFirstMochaProject.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "express": "^4.15.2",
     "mocha": "^3.3.0"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
